<resources>
    <string name="app_name">Dicoding App</string>
    <string name="signup">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="message_welcome_page">Want to learn Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Just go to Dicoding!</string>
    <string name="title_welcome_page">Welcome to Dicoding!</string>
    <string name="title_signup_page">Please complete your information below.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your data first.</string>
    <string name="title_login_page">Are you ready to upgrade your skills?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="galery">Gallery</string>
    <string name="description">Description max 180 characters</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Please Upload with image</string>
    <string name="login_image">Login image</string>
    <string name="create_new_post">Create new post</string>
    <string name="signup_image">signup image</string>
    <string name="image_preview">Image preview</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="your_name">Fullname</string>
    <string name="your_email_address">Email Address</string>
    <string name="retry_button">Retry</string>
    <string name="continue_button">Next</string>
    <string name="success_login">Success!</string>
    <string name="failed_login">Failed!</string>
    <string name="success_to_login_messgae">Success to login!</string>
    <string name="user_created" translatable="false">User created</string>
    <string name="email_already_taken" translatable="false">Email is already taken</string>
    <string name="email_already_taken_message">Email is already taken</string>
    <string name="account_created_message">Account created. Please login!</string>
    <string name="success_signup" translatable="false">Success!</string>
    <string name="failed_signup">Failed!</string>
    <string name="image_post" translatable="false">Image Post</string>
    <string name="appwidget_text" translatable="false">Dicoding Feeds</string>
    <string name="empty_text" translatable="false">NO DATA</string>
    <string name="map" translatable="false">Map</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="retry">Try Again</string>
    <string name="live_location">Live Location</string>
    <string name="password_placeholder" translatable="false">*********</string>
    <string name="password_should_not_empty">Password should not be empty</string>
    <string name="password_length_error">Password should be more than 8 characters</string>
</resources>