<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/ic_map"
        android:icon="@drawable/ic_map"
        android:title="@string/map"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>